# eval-prompt

./: .gitignore  README.md  prompt-eval.ipynb  prompt.ipynb  pyproject.toml  requirements.txt
.github/workflows/: evaluation.yml
apispec/: 2.yml  3.yml  pytest.yml
apisrc/: pet.js
evalprompt/: generateApiSpec.py  user-message.jinja2  user-message2.jinja2
evaluator/: errorWarnEval.py  specEval.py
evaluator/specCalc/: __init__.py  _specCalc.py
output/: cstest_response.yml  output.jsonl  pet_response.yml  pytest_response.yml  test.json
prompteval/: analyse.py  downloadSpecFiles.py  evaluate.py  prompteval.py  user-message.jinja2
prompts/: genSpecFromApiCode.mustache
results/: cstest_response.yml  cstest_response_output.json  output.jsonl  pet_response.yml  pet_response_output.json  pytest_response.yml  pytest_response_output.json
